# navigation_layers

human_aware_navigation_layers/: CMakeLists.txt  costmap_plugins.xml  package.xml
human_aware_navigation_layers/cfg/: ProxemicLayer.cfg
human_aware_navigation_layers/include/human_aware_navigation_layers/: proxemic_layer.h  social_layer.h
human_aware_navigation_layers/src/: passing_layer.cpp  proxemic_layer.cpp  social_layer.cpp
navigation_layers/: package.xml
