<package format="2">
  <name>human_aware_navigation_layers</name>
  <version>0.4.0</version>
  <description>
  Plugin-based layers for the navigation stack that 
  implement various social navigation contraints, like proxemic distance. 
  </description>
  <author email="j.geijsberts@student.tue.nl">Josja Geijsberts</author>
  <maintainer email="j.geijsberts@student.tue.nl">Josja Geijsberts</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/social_navigation_layers</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>angles</depend>
  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>people_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>

  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
  </export>

</package>
